app/assets/stylesheets/sky.css.scss
@import "globals";

html,body {
    padding: 0px;
    margin: 0px;
    background: url("../images/sky/body_bg.png");
    font-family: 'Droid Sans', Arial;
    font-size: 13px;
    color: #343434;
    height: 100%;
    text-align: justify;
    min-width: $content_width;
}

h1,h2,h3,h4,h5,h6 {
  padding: 0;
  margin: 0 0 0.75em 0;
  vertical-align: baseline;
  font-weight: normal;
}

h1 {
  font-size: 24px;
}

h2 {
  font-size: 20px;
}

a {
  color: #225897;
  text-decoration: none;
  outline: none;
}

label {
  font-size: 1.2em;
}

#label {
  width: 75px;
  display: inline-block;
  margin-right: 5px;
}

textarea, input, select {
  border: 1px solid #225897;
  padding: 2px 5px;
  margin: 5px auto;
  background: #F7F7F7;
}

textarea {
  width: $main_content_width;
  resize: none;
}

p {
  line-height: 1.3em;
}

#container {
  margin: 0 auto (-1)*$footer_height;
  min-width: $content_width;
  min-height: 100%;
}

#main {
  width: $content_width;
  height: 100%;
  min-width: $content_width;
  margin: 0 auto;
  padding: 20px 0;
  overflow: auto;
  @include centered();

  #sidebar {
    float: right;
    margin: 0 10px;
    width: $sidebar_width;
  }

  #content {
    width: $main_content_width;
    line-height: 1.3em;
    margin: 0 10px;
    min-height: 100%;
  }
}

#footer {
  background: url("../images/sky/usernav_bg.png");
  height: $footer_height;
  min-width: $content_width;
  clear:both;

  #copyright {
    padding-top: 10px;
    width: $content_width;
    min-width: $content_width;
    color: #616161;
    @include centered();
  }
}

.clear {
  height: $footer_height;
  clear: both;
}

#page_header {
    background: url("../images/sky/header_bg.png");
    height: $header_height;
	border-width: 0px 10px 0px 0px;

    div.content {
        padding-top: ($header_height - $navigation_height) / 2;
    }
}

#photo_wrapper {
  margin: 10px 0px;
}

.event {
  margin: 10px 0px;

  .title_wrapper {
    font-size: 17px;
    height: auto;

    .title {
      display: inline-block;
      width: 200px;
    }

    .calendar {
      display: inline-block;
      width: 25px;
      border-style: none;
    }
  }

  .location, .time {
    color: #616161;
  }

 .description {
    padding: 1em 0;
    font-size: 13px;
  }
}


.clearfix:after {
  clear: both;
}

.clearfix:before, clearfix:after {
  content: " ";
  display: block;
  height: 0;
  visibility: hidden;
}

.post {
  margin: 0 0 1em 0;
  max-width: $main_content_width;

  .content {
    overflow: auto;
    margin: 0.8em 0;
  }

  .time {
    color: #616161;
    margin-bottom: 1em;
  }

  img {
    margin: 0.75em;
    max-width: $main_content_width;
  }
}

.option, {
  color: #616161;
  display: inline;
}

blockquote, address {
  color: #616161;
  padding: 0 30px;
  border-left: 2px solid #225897;
}

.album {
  display: inline-block;
  width: 310px;
  text-align: center;
}

.photos {
  margin: 10px 0px;
}

#club_picture {
  width: 500px;
  @include centered();
  margin-bottom: 10px;
}

